; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_html-outline.c_cat_html_text.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_html-outline.c_cat_html_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.outline_parser = type { i64 }
%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, %struct.outline_parser*, %struct.TYPE_3__*)* @cat_html_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cat_html_text(i32* %0, %struct.outline_parser* %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.outline_parser*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.outline_parser* %1, %struct.outline_parser** %5, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %6, align 8
  %7 = load %struct.outline_parser*, %struct.outline_parser** %5, align 8
  %8 = getelementptr inbounds %struct.outline_parser, %struct.outline_parser* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %3
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @fz_new_buffer(i32* %12, i32 1024)
  %14 = load %struct.outline_parser*, %struct.outline_parser** %5, align 8
  %15 = getelementptr inbounds %struct.outline_parser, %struct.outline_parser* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load i32*, i32** %4, align 8
  %18 = load %struct.outline_parser*, %struct.outline_parser** %5, align 8
  %19 = getelementptr inbounds %struct.outline_parser, %struct.outline_parser* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @fz_clear_buffer(i32* %17, i64 %20)
  br label %22

22:                                               ; preds = %16, %11
  %23 = load i32*, i32** %4, align 8
  %24 = load %struct.outline_parser*, %struct.outline_parser** %5, align 8
  %25 = getelementptr inbounds %struct.outline_parser, %struct.outline_parser* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @cat_html_flow(i32* %23, i64 %26, i32 %29)
  %31 = load i32*, i32** %4, align 8
  %32 = load %struct.outline_parser*, %struct.outline_parser** %5, align 8
  %33 = getelementptr inbounds %struct.outline_parser, %struct.outline_parser* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @cat_html_box(i32* %31, i64 %34, i32 %37)
  %39 = load i32*, i32** %4, align 8
  %40 = load %struct.outline_parser*, %struct.outline_parser** %5, align 8
  %41 = getelementptr inbounds %struct.outline_parser, %struct.outline_parser* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = call i8* @fz_string_from_buffer(i32* %39, i64 %42)
  ret i8* %43
}

declare dso_local i64 @fz_new_buffer(i32*, i32) #1

declare dso_local i32 @fz_clear_buffer(i32*, i64) #1

declare dso_local i32 @cat_html_flow(i32*, i64, i32) #1

declare dso_local i32 @cat_html_box(i32*, i64, i32) #1

declare dso_local i8* @fz_string_from_buffer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
